<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom1"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email1"/>

    <TextView
        android:id="@+id/textViewClasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classe"/>

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partager"/>

</LinearLayout>
