<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ecrire_votre_nom"
            android:autofillHints=""
             />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ecrire_votre_prenom"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ecrire_votre_email"
            android:minHeight="48dp"
            android:autofillHints="" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/valider"
            android:focusable="true" />
         <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>


